Sat Oct  2 16:41:02 BST 2004 (njh)
----------------------------------
  * libclamav/table.c:	Fix compilation problem when --enable-debug is not set

Fri Oct  1 14:50:55 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Fixed handling of the end of yEnc attachments

Fri Oct  1 08:57:42 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Better error message for 'message/partial' emails

Fri Oct  1 02:28:08 CEST 2004 (tk)
----------------------------------
  * clamd: add new directive IdleTimeout (patch by Andrey J. Melnikoff (TEMHOTA)
	   <temnota*kmv.ru>)
  * clamscan/others.c: preserve Mac OS X resource forks in filecopy() 
		       (thanks to Remi Mommsen <remigius.mommsen*cern.ch>)
  * cosmetic fixes (thanks to Damian Menscher <menscherr*uiuc.edu>)

Thu Sep 30 22:48:53 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Remove unneeded strdup() calls
			Fix some "filename too long" errors when MailFollowURLs
				is set

Thu Sep 30 20:19:46 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Allow --from with no e-mail address

Thu Sep 30 10:01:25 BST 2004 (njh)
----------------------------------
  * libclamav:		Further small speed and size optimisations with MIME
				decoding

Thu Sep 30 09:24:26 BST 2004 (trog)
-----------------------------------
  * libclamav/special.c: match obfuscated JPEG files

Thu Sep 30 10:01:23 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher: handle Exploit.JPEG.Comment.*

Thu Sep 30 02:19:12 CEST 2004 (tk)
----------------------------------
  * libclamav/special.c: add cli_check_jpeg_exploit (by Trog)
  * libclamav/matcher.c: add additional check to eliminate false positive
			 matches of Exploit.JPEG.Comment

Tue Sep 28 19:41:39 BST 2004 (njh)
----------------------------------
  * libclamav:		Some small speed and size optimisations in MIME decoding

Tue Sep 28 15:46:18 BST 2004 (njh)
---------------------------------