@@ -511,6 +511,7 @@ Changes
 			an operating system that doesn't support it
 0.80e	30/9/04	If you say --from with no arguments, the from address is now
 			set to the orginator's address
+0.80f	2/10/04	Fix crash if %h is used in a template and --headers is not set
 
 INTERNATIONALISATION
 
